--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,12 @@
         </dependencies>
     </dependencyManagement>
     <dependencies>
+        <!--oss-->
+        <dependency>
+            <groupId>com.aliyun.oss</groupId>
+            <artifactId>aliyun-sdk-oss</artifactId>
+            <version>2.8.2</version>
+        </dependency>
         <!--mybatis-->
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
