--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "0.19.0",
     "bootstrap": "4.4.1",
     "bootstrap-vue": "2.2.2",
+    "clipboard": "^2.0.6",
     "date-fns": "2.9.0",
     "highlight.js": "^10.1.1",
     "swagger-ui-dist": "3.24.3",
